# jrte-corpus

./: .gitignore  CITATION.cff  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/workflows/: ci.yml  typos.yml
data/: operation.rte.lrec2020_mlm.tsv  pn.tsv  rhr.tsv  rte.lrec2020_me.tsv  rte.lrec2020_mlm.tsv  rte.lrec2020_sem_long.tsv  rte.lrec2020_sem_short.tsv  rte.lrec2020_surf.tsv  rte.nlp2020_append.tsv  rte.nlp2020_base.tsv
scripts/: check_data.py  check_source_exist.py
