[tool.poetry]
name = "jrte-corpus"
version = "1.0.0"
description = ""
authors = ["Yuta Hayashibe <yuta@hayashibe.jp>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
coverage = ">=5.3"
flake8 = ">=3.8.4"
isort = ">=5.6.4"
yamllint = ">=1.25.0"
pydocstyle = ">=5.1.1"
black = ">=21.12b0"
toml = "^0.10.2"
cffconvert = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "basic"
reportUnusedVariable="warning"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.poetry.scripts]
